			SWI-Prolog ChangeLog
			====================

  * FIXED: random/3 in library(quintus).  Thanks to Peng Te.

  * FIXED: improved type-checking converting code-lists or character-lists
    to text.  The routine is now also faster, especially if the argument is
    not a valid codelist of character list.

  * MODIFIED: Renamed write_ln/1 into writeln/1 for better compatibility.
    Added write_ln/1 to library(backcomp), so existing code shouldn't be
    bothered.

  * FIXED: sub_atom(+,-,-,+,-): crash on backtracking.  Thanks to Anjo
    Anjewierden.

VERSION 4.1.0
=============

  * ADDED: statistics/2 to recognise the keys used by Quintus and SICStus,
    for improved compatibility.

  * ADDED: library(main) for simple #! scripts processing the commandling.

  * FIXED: Make file_search_path/2 resolved paths relative to the current
    working directory work properly after changing CWD.  Reported by Bert
    Bredeweg.

  * ADDED: working_directory/2 to query/change working directory, providing
    better compatibility and a non-hacky way to get the current directory.

  * FIXED: Another problems handling `inlined' calls for the new implementation
    of call/1.  Thanks to Lyosha Ilyukhin.

  * FIXED/PORT: Win32 missing cleanupTerm(), some signed/unsigned problems
    in debug mode.

  * ENHANCED: latex2html to use \label{} following a \*section or \chapter
    as base for constructing a filename for that section.  Changed manual
    sources to give all chapters and sections a label.  This gives sections
    from the SWI-Prolog HTML manual a more stable URL.

  * FIXED: Problem handling `inlined' calls for the new implementation
    of call/1.  Thanks to Lourens van der Meij.

  * FIXED: Printing syntax errors holding ~-characters to avoid problems
    with format-special characters.  With patch by NIDE Naoyuki.  Thanks.

  * ADDED: Allow for MKINDEX.pl to control indexing process of library
    directories for auto-loading.
